<resources>
    <string name="app_name">Been Together</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="love_quote">Love quote</string>
    <string name="top_title_default">In love</string>
    <string name="bottom_title_default">Days</string>
    <string name="choose_ava">Choose avatar</string>
    <string name="reset_ava">Reset avatar</string>
    <string name="change_nick_name">Change nick name</string>
    <string name="choose_birthday">Choose birthday</string>
    <string name="choose_border_color">Choose border color</string>
    <string name="change_gender">Change gender</string>
    <string name="choose_color">Choose color</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_close">Close</string>

    <string name="choose_start_date">Choose start date</string>
    <string name="change_top_title">Change top title</string>
    <string name="change_bottom_title">Change bottom title</string>
    <string name="choose_background">Choose background</string>
    <string name="reset_background">Reset background</string>
    <string name="choose_love_color">Choose color of love</string>


    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hide">Hide</string>

    <string name="notify_quote">Notify quote by date</string>
    <string name="notify">Notification</string>
    <string name="rate">Rate us</string>
    <string name="privacy">Privacy</string>
</resources>