<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    tools:context=".ui.home.lovedate.LoveDateDialogFragment"
    android:background="#FFFFFF"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/choose_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground">
        <TextView
            android:layout_marginLeft="20dp"
            android:text="@string/choose_start_date"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/change_top_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground">
        <TextView
            android:layout_marginLeft="20dp"
            android:background="?selectableItemBackground"
            android:text="@string/change_top_title"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/change_bottom_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground">
        <TextView
            android:layout_marginLeft="20dp"
            android:background="?selectableItemBackground"
            android:text="@string/change_bottom_title"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/choose_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground">
        <TextView
            android:layout_marginLeft="20dp"
            android:background="?selectableItemBackground"
            android:text="@string/choose_background"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/reset_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground">
        <TextView
            android:layout_marginLeft="20dp"
            android:background="?selectableItemBackground"
            android:text="@string/reset_background"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/choose_love_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground">
        <TextView
            android:layout_marginLeft="20dp"
            android:background="?selectableItemBackground"
            android:text="@string/choose_love_color"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"/>
    </LinearLayout>

</LinearLayout>