<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    tools:context=".ui.home.user.avataruser.AvatarUserDialogFragment"
    android:background="#FFFFFF"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/choose_avt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground">
        <TextView
            android:layout_marginLeft="20dp"
            android:text="@string/choose_ava"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/reset_avt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground">
        <TextView
            android:layout_marginLeft="20dp"
            android:background="?selectableItemBackground"
            android:text="@string/reset_ava"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/change_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground">
        <TextView
            android:layout_marginLeft="20dp"
            android:background="?selectableItemBackground"
            android:text="@string/change_nick_name"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/choose_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground">
        <TextView
            android:layout_marginLeft="20dp"
            android:background="?selectableItemBackground"
            android:text="@string/choose_birthday"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/choose_border_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground">
        <TextView
            android:layout_marginLeft="20dp"
            android:background="?selectableItemBackground"
            android:text="@string/choose_border_color"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"/>
    </LinearLayout>

</LinearLayout>