<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    tools:context=".ui.home.user.nameuser.GenderFragment"
    android:background="#FFFFFF"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/btn_male"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground">
        <TextView
            android:layout_marginLeft="20dp"
            android:text="@string/male"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_female"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground">
        <TextView
            android:layout_marginLeft="20dp"
            android:background="?selectableItemBackground"
            android:text="@string/female"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_hide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground">
        <TextView
            android:layout_marginLeft="20dp"
            android:background="?selectableItemBackground"
            android:text="@string/hide"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"/>
    </LinearLayout>

</LinearLayout>