<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.choosecolor.ChooseColorDialogFragment"
    android:background="#FFFFFF">
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_margin="10dp">
       <TextView
           android:id="@+id/tv_choose_color"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintLeft_toLeftOf="parent"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/choose_color"
           android:textColor="#000000"
           android:textSize="20sp"/>
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/recy_list_color"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toBottomOf="@id/tv_choose_color"
           tools:listitem="@layout/item_color"/>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintTop_toBottomOf="@id/recy_list_color">
           <Button
               android:id="@+id/btn_cancel"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="?selectableItemBackground"
               android:text="@string/btn_cancel"
               android:textColor="@color/colorUser4"/>
           <Button
               android:id="@+id/btn_ok"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="?selectableItemBackground"
               android:text="@string/btn_ok"
               android:textColor="@color/colorUser4"/>
       </LinearLayout>
   </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>