<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.setting.SettingFragment"
    android:background="@drawable/img_background_default"
    android:orientation="vertical"
    android:id="@+id/setting_layout">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="#74606466"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/toolbar_layout"
        android:padding="10dp">
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_back"
            android:background="?selectableItemBackground"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/notify_quote_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frame"
            android:layout_marginBottom="10dp"
            android:paddingRight="20dp">
            <TextView
                android:layout_marginLeft="20dp"
                android:text="@string/notify_quote"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_quote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                app:thumbTint="#74606466"
                app:trackTint="#74D1D3D5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frame"
            android:layout_marginBottom="10dp"
            android:paddingRight="20dp">
            <TextView
                android:layout_marginLeft="20dp"
                android:text="@string/notify"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                app:thumbTint="#74606466"
                app:trackTint="#74D1D3D5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frame"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_marginLeft="20dp"
                android:text="@string/rate"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/frame"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_marginLeft="20dp"
                android:text="@string/privacy"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>