<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment"
    android:background="?selectableItemBackground"
    android:id="@+id/home_layout">

    <ImageView
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="#74606466"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/toolbar_layout">
        <ImageButton
            android:id="@+id/btn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_setting"
            android:background="?selectableItemBackground"
            android:layout_marginRight="10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
        android:layout_margin="10dp"
        android:id="@+id/love_quote_layout"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_email"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/love_quote"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/border_love_layout"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:background="@drawable/ic_circle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/love_quote_layout"
        android:layout_marginTop="10dp">
    </de.hdodenhof.circleimageview.CircleImageView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/border_love_layout"

        android:src="#281F2629" />

    <TextView
        android:id="@+id/top_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/amithen"
        android:gravity="center"
        android:text="@string/top_title_default"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/border_love_layout" />
    <TextView
        android:id="@+id/love_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_title"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="1"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/allura"/>
    <TextView
        android:id="@+id/bottom_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/love_date"
        android:layout_marginTop="10dp"
        android:text="@string/bottom_title_default"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/amithen"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/border_user_1"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/border_love_layout"
        app:layout_constraintRight_toLeftOf="@id/btn_heart"
        android:background="@drawable/ic_circle"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ava_user_1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/border_user_1"
        app:layout_constraintRight_toLeftOf="@id/btn_heart"
        android:src="@drawable/img_user_1_default" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/border_user_2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/border_love_layout"
        app:layout_constraintLeft_toRightOf="@id/btn_heart"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_circle"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ava_user_2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/border_user_2"
        app:layout_constraintLeft_toRightOf="@id/btn_heart"
        android:src="@drawable/img_user_2_default" />
    <LinearLayout
        android:id="@+id/info_user_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/border_user_1"
        app:layout_constraintRight_toLeftOf="@id/btn_heart"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:paddingHorizontal="10dp"
            android:id="@+id/nick_name_user_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User 1"
            android:fontFamily="@font/amithen"
            android:textColor="#000000"
            android:textSize="20sp"
            android:background="@drawable/frame"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/frame"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="7dp"
            android:gravity="center">
            <ImageView
                    android:id="@+id/gender_user_1"
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_gender_male"/>
            <TextView
                android:id="@+id/birth_user_1"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/allura"
                android:textColor="#000000"
                android:textSize="13sp"/>
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_heart"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/ic_heart"
        android:backgroundTint="@color/colorUser4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/border_love_layout"
        android:tint="@color/colorUser4"/>

    <LinearLayout
        android:id="@+id/info_user_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/border_user_2"
        app:layout_constraintLeft_toRightOf="@id/btn_heart"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/nick_name_user_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="User 2"
            android:background="@drawable/frame"
            android:fontFamily="@font/amithen"
            android:textColor="#000000"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/frame"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="7dp"
            android:gravity="center">
            <ImageView
                android:id="@+id/gender_user_2"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_gender_male"/>
            <TextView
                android:id="@+id/birth_user_2"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/allura"
                android:textColor="#000000"
                android:textSize="13sp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>